--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "chokidar": "^1.4.3",
     "colors": "^1.1.2",
+    "deep-equal": "^1.0.1",
     "diff": "^2.2.1",
     "express": "^4.13.4",
     "openurl": "^1.1.1",
