--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "preferGlobal": true,
   "name": "how-to-markdown",
   "version": "1.3.0",
   "description": "Learn you how to start using Markdown",
-  "main": "./index.js",
+  "bin": {
+    "how-to-markdown": "./bin/how-to-markdown"
+  },
   "scripts": {
     "postpublish": "git push --follow-tags"
   },
@@ -40,8 +43,4 @@
     "remark-html": "^6.0.0",
     "workshopper-adventure": "^6.0.1"
   },
-  "bin": {
-    "how-to-markdown": "./bin/how-to-markdown"
-  },
-  "preferGlobal": true
 }
