Add ESlint and workshopper-adventure-test

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "how-to-markdown": "./bin/how-to-markdown"
   },
   "scripts": {
+    "test": "eslint . && workshopper-adventure-test",
     "postpublish": "git push --follow-tags"
   },
   "repository": {
@@ -43,4 +44,10 @@
     "remark-html": "^6.0.0",
     "workshopper-adventure": "^6.0.1"
   },
+  "devDependencies": {
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "workshopper-adventure-test": "^1.1.0"
+  }
 }
