--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,14 @@
 {
-  "extends": "airbnb-base",
-  "plugins": [
-    "import"
-  ],
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "extends": "eslint:recommended",
   "rules": {
-    "no-console": 0,
-    "global-require": 0
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error","always"],
+    "no-console": 0
   }
 }
